--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.0+2
   pin_entry_text_field: ^0.1.3
+  autocomplete_textfield: ^1.7.3
+  flutter_html_to_pdf: ^0.5.2
+  share: ^0.6.5+4
+  path_provider: ^1.6.22
 
 dev_dependencies:
   flutter_test:
