--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_html_to_pdf: ^0.5.2
   share: ^0.6.5+4
   path_provider: ^1.6.22
+  firebase_storage: ^5.0.0-dev.3
 
 dev_dependencies:
   flutter_test:
