--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   share: ^0.6.5+4
   path_provider: ^1.6.22
   firebase_storage: ^5.0.0-dev.3
+  dash_chat: ^1.1.15
+  image_picker: ^0.6.7+12
+
 
 dev_dependencies:
   flutter_test:
