--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.6.7+12
   date_format: ^1.0.9
   flutter_local_notifications: ^1.4.2
+  rxdart: ^0.24.1
 
   # timeline_tile: ^1.0.0
 
