--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   splashscreen : ^1.2.0
   firebase_auth: ^0.18.0+1
@@ -43,8 +40,8 @@ dependencies:
   date_format: ^1.0.9
   flutter_local_notifications: ^1.4.2
   rxdart: ^0.24.1
+  rive: 
 
-  # timeline_tile: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +68,8 @@ flutter:
     # - assets/otp_icon.png
     - assets/countrycodes.json
     - assets/images/
+    # - assets/new_file.riv
+    - assets/test.riv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
