--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_local_notifications: ^1.4.2
   rxdart: ^0.24.1
   rive: 
+  curved_navigation_bar: ^0.3.4
 
 
 dev_dependencies:
